--- a/src/gestaoflex/adm-foundation/argocd.yaml
+++ b/src/gestaoflex/adm-foundation/argocd.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: adm-foundation
+  name: adm-foundation-hom
   namespace: argocd
 spec:
   destination:
@@ -10,7 +10,7 @@ spec:
   project: gflex
   source:
     path: src/gestaoflex/adm-foundation/hom
-    repoURL: git@github.com:marcelodeassis1/gestaoflex.git
+    repoURL: git@github.com:marcelodeassis1/gestaoflex_cd.git
     targetRevision: HEAD
     
   syncPolicy:
@@ -34,7 +34,7 @@ spec:
   project: gflex
   source:
     path: src/gestaoflex/adm-foundation/prd
-    repoURL: git@github.com:marcelodeassis1/gestaoflex.git
+    repoURL: git@github.com:marcelodeassis1/gestaoflex_cd.git
     targetRevision: HEAD
     
   syncPolicy:
