--- a/src/gestaoflex/pfm-manager/argocd.yaml
+++ b/src/gestaoflex/pfm-manager/argocd.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: pfm-manager
+  name: pfm-manager-hom
   namespace: argocd
 spec:
   destination:
@@ -10,7 +10,7 @@ spec:
   project: gflex
   source:
     path: src/gestaoflex/pfm-manager/hom
-    repoURL: git@github.com:marcelodeassis1/gestaoflex.git
+    repoURL: git@github.com:marcelodeassis1/gestaoflex_cd.git
     targetRevision: HEAD
     
   syncPolicy: 
@@ -34,7 +34,7 @@ spec:
   project: gflex
   source:
     path: src/gestaoflex/pfm-manager/prd
-    repoURL: git@github.com:marcelodeassis1/gestaoflex.git
+    repoURL: git@github.com:marcelodeassis1/gestaoflex_cd.git
     targetRevision: HEAD
     
   syncPolicy: 
