--- a/.github/workflows/gfx-pfm-manager.yml
+++ b/.github/workflows/gfx-pfm-manager.yml
@@ -6,34 +6,29 @@ on:
       - pfm-manager-hom-new-image
       - pfm-manager-prd-new-image
 jobs:
-  deploy_hom:
+  deploy:
     runs-on: ubuntu-latest
-    if: ${{ github.event.client_payload.image == 'refs/heads/develop' }}
+    
     steps:
     - uses: actions/checkout@v3
 
-    - name: Update Image Version
+    ### HOMOLOGACAO ###
+    - name: Update Version - pfm-manager (hom)
+      if: ${{ github.event.client_payload.branch == 'refs/heads/develop' }}
       id: imgupd
       uses: mikefarah/yq@master
       with:
         cmd: yq eval '.spec.template.spec.containers[0].image = "${{ github.event.client_payload.image }}"' -i src/gestaoflex/pfm-manager/hom/k8s-deployment.yaml
-      
+
+    ### PRODUCAO ###
+    - name: Update Version - pfm-manager (prd)
+      if: ${{ github.event.client_payload.branch == 'refs/heads/master' }}
+      id: imgupd
+      uses: mikefarah/yq@master
+        with:
+          cmd: yq eval '.spec.template.spec.containers[0].image = "${{ github.event.client_payload.image }}"' -i src/gestaoflex/pfm-manager/prd/k8s-deployment.yaml
+   
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
         commit_message: Apply image name changes
 
-  deploy_prd:
-    runs-on: ubuntu-latest
-    if: ${{ github.event.client_payload.image == 'refs/heads/master' }}
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Update Image Version
-      id: imgupd
-      uses: mikefarah/yq@master
-      with:
-        cmd: yq eval '.spec.template.spec.containers[0].image = "${{ github.event.client_payload.image }}"' -i src/gestaoflex/pfm-manager/prd/k8s-deployment.yaml
-      
-    - uses: stefanzweifel/git-auto-commit-action@v4
-      with:
-        commit_message: Apply image name changes        
