--- a/.github/workflows/gestaoflex-deploy.yml
+++ b/.github/workflows/gestaoflex-deploy.yml
@@ -14,14 +14,37 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    
+
+    # ADM-FOUNDATION
+    - name: Update Version - adm-foundation (prd)
+      if: ${{ github.event.client_payload.app == 'adm-foundation' }}  
+      uses: mikefarah/yq@master
+      with:
+        cmd: yq eval '.spec.template.spec.containers[0].image = "${{ github.event.client_payload.image }}"' -i src/gestaoflex/adm-foundation/prd/k8s-deployment.yaml
+
+    # PFM-AUTH
+    - name: Update Version - pfm-auth (prd)
+      if: ${{ github.event.client_payload.app == 'pfm-auth' }}  
+      uses: mikefarah/yq@master
+      with:
+        cmd: yq eval '.spec.template.spec.containers[0].image = "${{ github.event.client_payload.image }}"' -i src/gestaoflex/pfm-auth/prd/k8s-deployment.yaml
+
     # PFM-MANAGER
     - name: Update Version - pfm-manager (prd)
       if: ${{ github.event.client_payload.app == 'pfm-manager' }}  
       uses: mikefarah/yq@master
       with:
         cmd: yq eval '.spec.template.spec.containers[0].image = "${{ github.event.client_payload.image }}"' -i src/gestaoflex/pfm-manager/prd/k8s-deployment.yaml
-   
+
+    # PFM-NOTIFY
+    - name: Update Version - pfm-notify (prd)
+      if: ${{ github.event.client_payload.app == 'pfm-notify' }}  
+      uses: mikefarah/yq@master
+      with:
+        cmd: yq eval '.spec.template.spec.containers[0].image = "${{ github.event.client_payload.image }}"' -i src/gestaoflex/pfm-notify/prd/k8s-deployment.yaml
+
+
+
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
         commit_message: Apply image name changes
@@ -35,14 +58,35 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    
-    #PFM-MANAGER
+
+
+    # ADM-FOUNDATION
+    - name: Update Version - adm-foundation (hom)
+      if: ${{ github.event.client_payload.app == 'adm-foundation' }}  
+      uses: mikefarah/yq@master
+      with:
+        cmd: yq eval '.spec.template.spec.containers[0].image = "${{ github.event.client_payload.image }}"' -i src/gestaoflex/adm-foundation/hom/k8s-deployment.yaml
+
+    # PFM-AUTH
+    - name: Update Version - pfm-auth (hom)
+      if: ${{ github.event.client_payload.app == 'pfm-auth' }}  
+      uses: mikefarah/yq@master
+      with:
+        cmd: yq eval '.spec.template.spec.containers[0].image = "${{ github.event.client_payload.image }}"' -i src/gestaoflex/pfm-auth/hom/k8s-deployment.yaml
+
+    # PFM-MANAGER
     - name: Update Version - pfm-manager (hom)
-      if: ${{ github.event.client_payload.app == 'pfm-manager' }}      
+      if: ${{ github.event.client_payload.app == 'pfm-manager' }}  
       uses: mikefarah/yq@master
       with:
         cmd: yq eval '.spec.template.spec.containers[0].image = "${{ github.event.client_payload.image }}"' -i src/gestaoflex/pfm-manager/hom/k8s-deployment.yaml
 
+    # PFM-NOTIFY
+    - name: Update Version - pfm-notify (hom)
+      if: ${{ github.event.client_payload.app == 'pfm-notify' }}  
+      uses: mikefarah/yq@master
+      with:
+        cmd: yq eval '.spec.template.spec.containers[0].image = "${{ github.event.client_payload.image }}"' -i src/gestaoflex/pfm-notify/hom/k8s-deployment.yaml
 
 
 
