--- a/src/cluster/kubernetes/cluster/kong-plugin-cors.yaml
+++ b/src/cluster/kubernetes/cluster/kong-plugin-cors.yaml
@@ -5,10 +5,46 @@ metadata:
   namespace: gflex-hom
 config: 
   origins: 
-  - https://app.site.net
-  - https://app.site.com
-  - https://login.site.net
-  - https://login.site.com
+  - https://app.gestaoflex.net
+  - https://app.gestaoflex.com
+  - https://login.gestaoflex.net
+  - https://login.gestaoflex.com
+  methods:
+  - GET
+  - POST
+  - PUT
+  - DELETE
+  - OPTIONS
+  headers:
+  - Origin
+  - Accept
+  - Accept-Version
+  - Content-Length
+  - Content-MD5
+  - Content-Type
+  - Date
+  - X-Auth-Token
+  - Authorization
+  exposed_headers:
+  - X-Auth-Token
+  credentials: true
+  max_age: 3600
+  preflight_continue: false
+plugin: cors
+
+---
+
+apiVersion: configuration.konghq.com/v1
+kind: KongPlugin
+metadata:
+  name: kong-cors
+  namespace: gflex
+config: 
+  origins: 
+  - https://app.gestaoflex.net
+  - https://app.gestaoflex.com
+  - https://login.gestaoflex.net
+  - https://login.gestaoflex.com
   methods:
   - GET
   - POST
